<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapp"
    tools:context=".QuizActivity">

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@color/colorPink"
        android:fontFamily="sans-serif-medium"
        android:freezesText="true"
        android:text="@string/confirm"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            android:textSize="20sp"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2"
            android:textSize="20sp"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3"
            android:textSize="20sp"
            android:freezesText="true"/>

    </RadioGroup>

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="casual"
        android:text="@string/_00_30"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="399dp"
        android:layout_height="118dp"
        android:layout_above="@id/radio_group"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bgquestion"
        android:layout_marginTop="40dp"
        android:text="@string/here_will_be_question_nhere_will_be_question_nhere_will_be_question"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amita_bold"
        android:text="@string/score_0"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amita_bold"
        android:text="@string/question_1_x"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:freezesText="true" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:fontFamily="@font/amita_bold"
        android:text="@string/difficulty"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:freezesText="true" />


</RelativeLayout>